# COMP315PROJECT

./: CMakeLists.txt  ChapterOne.cpp  Question.cpp  README.md  Scenario.cpp  achievements.cpp  action_window.cpp  b_conclusion.cpp  conclusion.cpp  main.cpp  review_window.cpp  rush_window.cpp  story_window.cpp  window_five.cpp  window_four.cpp  window_one.cpp  window_three.cpp  window_two.cpp  window_zero.cpp
ChapterOne/: Question11.txt  Question111.txt  Question112.txt  Question113.txt  Question12.txt  Question13.txt  Question14.txt  Question15.txt  Question16.txt  Question17.txt  Question18.txt  Question19.txt  Scenarios1.txt
ChapterThree/: Chapter#3_Scenarios.txt  Question31.txt  Question311.txt  Question312.txt  Question313.txt  Question32.txt  Question33.txt  Question34.txt  Question35.txt  Question36.txt  Question37.txt  Question38.txt  Question39.txt
ChapterTwo/: Question21.txt  Question211.txt  Question212.txt  Question213.txt  Question22.txt  Question23.txt  Question24.txt  Question25.txt  Question26.txt  Question27.txt  Question28.txt  Question29.txt  Scenarios.txt
GameDatabase/: SaveCurrentChapter.txt  completed_chapters.txt
Question_ScenariosSix/: Chapter6_Scenarios.txt  QuestionsPart1.txt  QuestionsPart10.txt  QuestionsPart11.txt  QuestionsPart12.txt  QuestionsPart2.txt  QuestionsPart3.txt  QuestionsPart4.txt  QuestionsPart5.txt  QuestionsPart6.txt  QuestionsPart7.txt  QuestionsPart8.txt  QuestionsPart9.txt
QuestionsFive/: Scenarios5.txt  chapter5_scenario10_question.txt  chapter5_scenario11_question.txt  chapter5_scenario12_question.txt  chapter5_scenario1_question.txt  chapter5_scenario2_question.txt  chapter5_scenario3_question.txt  chapter5_scenario4_question.txt  chapter5_scenario5_question.txt  chapter5_scenario6_question.txt  chapter5_scenario7_question.txt  chapter5_scenario8_question.txt  chapter5_scenario9_question.txt
ScenariosQuest4/: chapter4_scenario10_question.txt  chapter4_scenario11_question.txt  chapter4_scenario12_question.txt  chapter4_scenario1_question.txt  chapter4_scenario2_question.txt  chapter4_scenario3_question.txt  chapter4_scenario4_question.txt  chapter4_scenario5_question.txt  chapter4_scenario6_question.txt  chapter4_scenario7_question.txt  chapter4_scenario8_question.txt  chapter4_scenario9_question.txt  scenarios.txt
Scenarios_question_seven/: Chapter7_Scenario.txt  chapter7_scenario10_question.txt  chapter7_scenario11_question.txt  chapter7_scenario12_question.txt  chapter7_scenario1_question.txt  chapter7_scenario2_question.txt  chapter7_scenario3_question.txt  chapter7_scenario4_question.txt  chapter7_scenario5_question.txt  chapter7_scenario6_question.txt  chapter7_scenario7_question.txt  chapter7_scenario8_question.txt  chapter7_scenario9_question.txt
headerFiles/: ChapterOne.h  Question.h  Scenario.h  achievements.h  action_window.h  b_conclusion.h  conclusion.h  review_window.h  rush_window.h  story_window.h  window_five.h  window_four.h  window_one.h  window_three.h  window_two.h  window_zero.h
russain_ruolette_questions/: questions.txt
ui_widgets/: achievements.ui  action_window.ui  b_conclusion.ui  conclusion.ui  review_window.ui  rush_window.ui  story_window.ui  window_five.ui  window_four.ui  window_one.ui  window_three.ui  window_two.ui  window_zero.ui
